fix: refactor admins router and controller
